<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".HeadPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageButton
        android:id="@+id/backIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_icon"
        android:backgroundTint="@color/background1"
        android:contentDescription="@string/backIcon"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <ImageView
        android:id="@+id/head"
        android:layout_width="200dp"
        android:layout_height="350dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/head"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/body" />

    <ImageView
        android:id="@+id/hair"
        android:layout_width="265dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/hair"
        android:src="@drawable/hair"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/eyebrow"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/eyebrow"
        android:src="@drawable/eyebrow"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/eyes"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/eyes"
        android:src="@drawable/eyes"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/beard"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/beard"
        android:src="@drawable/beard"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/moustache"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/moustache"
        android:src="@drawable/moustache"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/beard">

        <CheckBox
            android:id="@+id/checkBoxHair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkAll"
            android:text="@string/hair"
            android:textColor="@color/background2"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxMoustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:checked="true"
            android:onClick="checkAll"
            android:text="@string/moustache"
            android:textColor="@color/background2"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxEyebrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkAll"
            android:text="@string/eyebrow"
            android:textColor="@color/background2"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxBeard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:checked="true"
            android:onClick="checkAll"
            android:text="@string/beard"
            android:textColor="@color/background2"
            android:textStyle="bold" />

    </GridLayout>

    <Button
        android:id="@+id/buttonContactUs"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:background="@drawable/filled_rounded"
        android:backgroundTint="#FF5722"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/contactUs"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>