<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_marginStart="14dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/letsStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="340dp"
        android:layout_height="345dp"
        android:background="@drawable/gradient_shape"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:background="@drawable/outline_rounded"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNIM"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:background="@drawable/outline_rounded"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/nim"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </GridLayout>

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_rounded"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/mail"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_rounded"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/passwd"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="315dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/filled_rounded"
            android:backgroundTint="#FF5722"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/signUp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/userIcon"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/welcomeBack" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2">

        <TextView
            android:id="@+id/textToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toSignIn"
            android:textColor="@color/background1" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/signIn"
            android:textColor="@color/buttonColor"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>